Make sure to do scrollbar layout if we suppressed it previously, even if we don't obviously need to do it.  Bug 364762, r+sr=roc